fix header spacing

--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ body, html {
 h2.heading {
     font-family: 'brandon-grotesque', sans-serif;
     color: #fff;
-    margin-bottom: -20px;
+    margin-bottom: -10px;
     display: inline-block;
     text-transform: uppercase;
     font-size: 18px;
